--- a/frontend-service/styles/globals.css
+++ b/frontend-service/styles/globals.css
@@ -1,3 +1,51 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.employee-detail > h5 {
+  font-weight: 600;
+  /* margin-bottom: 0.5rem; */
+  font-size: 20px;
+}
+
+.employee-detail > p {
+  font-weight: 500;
+  margin-bottom: 0.5rem;
+}
+form  h5 {
+  font-size: 16px;
+}
+form  input, select {
+  display: block;
+  border: 1px solid #1e1e1e;
+  padding: 0.5rem 1rem;
+  width: 100%;
+  border-radius: 10px;
+  font-size: 12px;
+  margin-top: 0.25rem;
+  margin-bottom: 0.5rem;
+  max-width: 400px;
+}
+
+form select {
+  max-width: 200px;
+}
+
+@media (min-width: 768px) {
+  .employee-detail > h5 {
+    /* margin-bottom: 0.5rem; */
+    font-size: 24px;
+  }
+
+  .employee-detail > p {
+    margin-bottom: 1rem;
+  }
+
+  form h5 {
+    font-size: 20px;
+  }
+
+  form input {
+    width: 100%;
+  }
+}
